Changelog
=========


1.0.8 (unreleased)
------------------

- Style all tables in content-core and reset strong (disabled by extjs).
  [jone]

- Add colorization with environment variable (izug_basetheme_colorization).
  [jone]

- Add mime type for DOCX and PPTX documents
  [eschmutz]

- Added izug4 profile
  [mathias.leimgruber]

- Custom navigation: indent first child nodes properly when navigation top is visible.
  [jone]

- Added CSS to override fonts for ExtJS tables
  [lgraf]

- Added IE9 fix for cut off external editor icon in ExtJS enabled tabbedview
  [lgraf]

- Added IE9 fix for growing content when hovering over ftw table rows
  See http://blog.brianrichards.net/post/6721471926/ie9-hover-bug-workaround
  [lgraf]

- Add fixes for extjs table styles
  [eschmutz]

- Added browserlayer for directoryservice
  [mathias.leimgruber]


1.0.7 (2012-03-13)
------------------

- Remove umlauts from changelog *grml*
  [mathias.leimgruber]


1.0.6 (2012-03-13)
------------------

- Ajdust translation from the serach_results template.
  [phgross]

- Hide listingBar on blog entries for izug.
  [mathias.leimgruber]

- Hide plone.comments for izug.
  [mathias.leimgruber]

- #1528 Behoerden - Kontaktformular mit aforms2web
  https://extranet.4teamwork.ch/support/zug/maintlog/1528/
  hack in zug_siteactions.pt to open contactform in new window. see comment
  in template for more infos.
  [eschmutz]


1.0.5 (2012-02-27)
------------------

- portal messages: add close icon.
  Issue #1757 Arbeitsplatz - Inhalt verschiebt sich beim Verschwinden von Info-Meldungen
  https://extranet.4teamwork.ch/support/zug/maintlog/1757
  [jone]


1.0.4 (2012-02-24)
------------------

- Added french translations.
  [ttschanz]

- Added specific task icons to sprites (remotetask, subtask).
  [jone]

- Fixed mime type for XLSX documents
  [lgraf]


- Add mimetype for adobe indesign
  [eschmutz]

- Added profiles for seantis directories service.
  [mathias.leimgruber]


1.0.3 (2012-02-06)